# advent-of-code-2022

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
aoc/: bencher.py  cli.py  discover.py  scrape.py
days/day01/: expect.txt  solution.py
days/day02/: expect.txt  solution.py
days/day03/: expect.txt  solution.py
days/day04/: expect.txt  solution.py
days/day05/: expect.txt  solution.py
days/day06/: expect.txt  solution.py
days/day07/: expect.txt  solution.py
days/day08/: expect.txt  solution.py
days/day09/: expect.txt  solution.py
days/day10/: expect.txt  solution.py
pipelines/: multi-lint.py
