[tool.poetry]
name = "aoc"
version = "0.1.1"
description = "The AoC modules"
authors = ["noaione <noaione0809@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
click = "^8.1.3"
python-dotenv = "^0.21.0"
beautifulsoup4 = "^4.11.1"
markdownify = "^0.11.6"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
isort = "^5.10.1"
black = "^22.10.0"

[tool.poetry.scripts]
aoc = "aoc.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py38", "py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | env
    | _build
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
extend_skip = ["_dataset/**", "env/**", "venv/**", "./venv/**", ".pytest_cache/**", ".nox/**"]
line_length = 110
skip_gitignore = true

[tool.pyright]
include = ["aoc", "days"]
exclude = ["venv", "env", "node_modules", ".venv", ".env", ".nox", ".pytest_cache", ".mypy_cache", ".tox", "build", "dist", "_build", "**/__pycache__"]
ignore = ["_testing"]

reportMissingImports = true
venv = "."

pythonVersion = "3.9"